@@ -22,13 +22,13 @@ Net::SSLeay::OCSP class in L<SPVM> represents L<OCSP|https://docs.openssl.org/ma
 
 C<static method response_status_str : string ($code : long);>
 
-Calls native L<OCSP_response_status_str|https://man.openbsd.org/OCSP_basic_sign.3> function, and returns its return value.
+Calls native L<OCSP_response_status_str|https://man.openbsd.org/OCSP_basic_sign.3> function given $code, and returns its return value.
 
 =head2 response_status
 
 C<static method response_status : int ($resp : L<Net::SSLeay::OCSP_RESPONSE|SPVM::Net::SSLeay::OCSP_RESPONSE>);>
 
-Calls native L<OCSP_response_status|https://docs.openssl.org/1.1.1/man3/OCSP_response_status> function, and returns its return value.
+Calls native L<OCSP_response_status|https://docs.openssl.org/1.1.1/man3/OCSP_response_status> function given $resp, and returns its return value.
 
 Exceptions:
 
@@ -52,7 +52,7 @@ If OCSP_basic_verify failed, an exception is thrown with C<eval_error_id> set to
 
 C<static basic_add1_cert : int ($resp : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>, $cert : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>);>
 
-Calls native L<OCSP_basic_add1_cert|https://github.com/openssl/openssl/blob/master/crypto/ocsp/ocsp_srv.c> function, puses $cert to the end of L<certs_list|SPVM::Net::SSLeay::OCSP_BASICRESP/"certs_list"> field of $resp, and returns its return value.
+Calls native L<OCSP_basic_add1_cert|https://github.com/openssl/openssl/blob/master/crypto/ocsp/ocsp_srv.c> function given $resp, $cert, puses $cert to the end of L<certs_list|SPVM::Net::SSLeay::OCSP_BASICRESP/"certs_list"> field of $resp, and returns its return value.
 
 Exceptions:
 
@@ -61,6 +61,18 @@ The OCSP_BASICRESP object $resp must be defined. Otherwise an exception is throw
 The X509 object $cert must be defined. Otherwise an exception is thrown.
 
 If OCSP_basic_add1_cert failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
+=head2 check_nonce
+
+C<static method check_nonce : int ($req : L<Net::SSLeay::OCSP_REQUEST|SPVM::Net::SSLeay::OCSP_REQUEST>, $resp : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>);>
+
+Calls native L<OCSP_check_nonce|https://docs.openssl.org/1.1.1/man3/OCSP_request_add1_nonce> function given $req, $resp, and returns its return value.
+
+Exceptions:
+
+The OCSP_REQUEST object $req must be defined. Otherwise an exception is thrown.
+
+The OCSP_BASICRESP $resp must be defined. Otherwise an exception is thrown.
 
 =head1 See Also
 
